--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/Gabriel-tessinari/economics-back-end#readme",
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/ejs": "^3.1.1",
+    "@types/html-pdf": "^3.0.0",
     "@types/node": "^18.0.3",
     "@types/uuid": "^8.3.4",
     "prisma": "^4.0.0",
@@ -32,7 +34,9 @@
     "@types/express": "^4.17.13",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "html-pdf": "^3.0.1",
     "uuid": "^8.3.2"
   }
 }
