--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/ejs": "^3.1.1",
     "@types/html-pdf": "^3.0.0",
     "@types/node": "^18.0.3",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "prisma": "^4.0.0",
     "ts-node": "^10.8.2",
@@ -39,6 +40,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "html-pdf": "^3.0.1",
+    "swagger-ui-express": "^4.5.0",
     "uuid": "^8.3.2"
   }
 }
