--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,13 @@
     "@types/cors": "^2.8.12",
     "@types/ejs": "^3.1.1",
     "@types/html-pdf": "^3.0.0",
+    "@types/jest": "^29.1.1",
     "@types/node": "^18.0.3",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
+    "jest": "^29.1.2",
     "prisma": "^4.0.0",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
@@ -34,7 +38,6 @@
   "dependencies": {
     "@prisma/client": "^4.0.0",
     "@types/express": "^4.17.13",
-    "bson": "^4.6.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
