--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@ngneat/falso": "^6.1.0",
     "@prisma/client": "^4.0.0",
     "@types/express": "^4.17.13",
     "bson": "^4.6.5",
