--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "rimraf dist && tsc",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
     "test": "jest",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "pg": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/config/postgresql.ts"
   },
   "repository": {
     "type": "git",
@@ -22,32 +23,26 @@
   "homepage": "https://github.com/Gabriel-tessinari/economics-back-end#readme",
   "devDependencies": {
     "@types/cors": "^2.8.12",
-    "@types/ejs": "^3.1.1",
-    "@types/html-pdf": "^3.0.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^29.1.1",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^18.0.3",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@types/uuid": "^8.3.4",
+    "@types/pg": "^8.10.9",
     "jest": "^29.1.2",
-    "prisma": "^4.0.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^5.3.2"
   },
   "dependencies": {
     "@ngneat/falso": "^6.1.0",
-    "@prisma/client": "^4.0.0",
-    "@types/express": "^4.17.13",
     "bson": "^4.6.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "html-pdf": "^3.0.1",
-    "swagger-ui-express": "^4.5.0",
-    "uuid": "^8.3.2"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3"
   }
 }
